objects/agf__ADM_Work_Status__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Type__c</fullName>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>User Story</fullName>
                </value>
                <value>
                    <fullName>Investigation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Work Status</label>
    <listViews>
        <fullName>agf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>